--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Index">Events</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a>
+                        </li>
                     </ul>
                 </div>
             </div>
