Add statistic service for player

--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Events/Index.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Events/Index.cshtml
@@ -23,7 +23,7 @@
                     </div>
                 </div>
             </div>
-
+            <a class="btn btn-primary"asp-area="Administration" asp-controller="Statistics" asp-action="Index" asp-route-eventId="@Model.Id">Event control</a>
         </div>
 
 
