--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Players/UploadProfileImage.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Players/UploadProfileImage.cshtml
@@ -1,12 +1,25 @@
 ﻿@model AirsoftApplication.Web.ViewModels.Images.InputImageViewModel
 
-<form asp-action="UploadProfileImage" enctype="multipart/form-data">
-    <div class="mb-3">
-        <label asp-for="Files" class="form-label">Select a photo</label>
-        <input asp-for="Files" class="form-control" type="file" id="formFileMultiple">
-        <span asp-validation-for="Files" class="text-danger"></span>
+
+<h4>
+    <a asp-controller="Home" asp-action="Index" class="link-primary">Home</a>/<a asp-controller="Players" asp-action="Index" class="link-primary">Profile</a>/Images
+</h4>
+@{
+    ViewData["Title"] = "ProfileImage";
+}
+
+<br />
+<div class="row">
+    <div class="col-md-8 ">
+        <form asp-action="UploadProfileImage" enctype="multipart/form-data">
+            <div class="mb-3">
+                <label asp-for="Files" class="form-label">Select a photo</label>
+                <input asp-for="Files" class="form-control" type="file" id="formFileMultiple">
+                <span asp-validation-for="Files" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Set profile image" class="btn btn-primary" />
+            </div>
+        </form>
     </div>
-    <div class="form-group">
-        <input type="submit" value="Set profile image" class="btn btn-primary" />
-    </div>
-</form>
+</div>
