--- a/AirsoftApplication/Web/AirsoftApplication.Web/wwwroot/css/site.css
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/wwwroot/css/site.css
@@ -1,6 +1,39 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.userProfileInfo .image {
+    position: relative
+}
+
+    .userProfileInfo .image .editImage {
+        position: absolute;
+        bottom: -27px;
+        right: 20px;
+        background: #0366d6;
+        color: #fff;
+        text-align: center;
+        font-size: 18px;
+        font-size: 1.8rem;
+        width: 54px;
+        height: 54px;
+        line-height: 54px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        -moz-background-clip: padding;
+        -webkit-background-clip: padding-box;
+        background-clip: padding-box
+    }
+
+
+@media (min-width: 992px) {
+    .userProfileInfo .image img {
+        width: 100%;
+        height: 300px;
+    }
+}
+
+
 a.navbar-brand {
     white-space: normal;
     text-align: center;
