--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Events/Index.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Events/Index.cshtml
@@ -4,7 +4,7 @@
     <a asp-controller="Home" asp-action="Index" class="link-primary">Home</a>/Event
 </h4>
 @{
-    ViewData["Title"] = "UpcomingEvent";
+    ViewData["Title"] = "Upcoming Event";
 }
 
 <br />
@@ -13,7 +13,7 @@
     <div class="col-md-5 border p-3">
         <div class="container">
             <div class="">
-                <img src="@Model.Image.ImageUrl" style="width:100%">
+                <img src="@Model.CoverImage.ImageUrl" style="width:100%">
             </div>
             <br />
             <div class="card mb-3" style="max-width: 540px;">
