--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Team/Events.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Team/Events.cshtml
@@ -9,7 +9,7 @@
         <div class="col-md-5 border p-3">
             <div class="container">
                 <div class="">
-                    <img src="@gameevent.Image.ImageUrl" style="width:100%">
+                    <img src="@gameevent.CoverImage.ImageUrl" style="width:100%">
                 </div>
                 <br />
                 <div class="card mb-3" style="max-width: 540px;">
