--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Events/AddImages.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Events/AddImages.cshtml
@@ -1,13 +1,31 @@
 ﻿@model AirsoftApplication.Web.ViewModels.Administration.Events.InputEventImagesViewModel
 
-<form asp-action="AddImages" enctype="multipart/form-data">
-    <div class="form-group">
-        <label asp-for="Images" class="control-label alert-heading">Image</label>
-        <input asp-for="Images" class="form-control  alert-heading" type="file" multiple>
-        <span asp-validation-for="Images" class="text-danger"></span>
+<h4>
+    <a asp-area="" asp-controller="Home" asp-action="Index" class="link-primary">Home</a>/<a asp-controller="Dashboard" asp-action="Index" class="link-primary">Dashboard</a>/AddImages
+</h4>
+@{
+    ViewData["Title"] = "Add field";
+}
+
+<br />
+
+<div class="photo-gallery">
+    <div class="container">
+        <div class="intro">
+            <h2 class="text-center">Event Images</h2>
+            <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+        </div>
     </div>
-    <input asp-for="EventId" class="form-control  alert-heading" type="hidden">
-    <div class="form-group">
-        <input type="submit" value="Add Images" class="btn btn-primary" />
-    </div>
-</form>
+</div>
+
+        <form asp-action="AddImages" enctype="multipart/form-data">
+            <div class="form-group">
+                <label asp-for="Images" class="control-label alert-heading">Image</label>
+                <input asp-for="Images" class="form-control  alert-heading" type="file" multiple>
+                <span asp-validation-for="Images" class="text-danger"></span>
+            </div>
+            <input asp-for="EventId" class="form-control  alert-heading" type="hidden">
+            <div class="form-group">
+                <input type="submit" value="Add Images" class="btn btn-primary" />
+            </div>
+        </form>
