--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Events/NoEvents.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Events/NoEvents.cshtml
@@ -9,7 +9,7 @@
 <br />
 
 <div class="col mr-3 mb-2">
-    <a class="btn btn-primary" asp-area="" asp-controller="" asp-action="">
+    <a class="btn btn-primary" asp-controller="Team" asp-action="Events">
         <i class="fas fa-bomb"></i> All events
     </a>
 
@@ -17,12 +17,12 @@
         <i class="far fa-envelope"></i> Contacts
     </a>
 
-    <a class="btn btn-primary" asp-controller="Contacts" asp-action="Index">
+    <a class="btn btn-primary" asp-controller="" asp-action="">
         <i class="fas fa-check-double"></i> Airsoft rules
     </a>
 
 </div>
-
+<br />
 <div class="row justify-content-center">
     @for (int i = 0; i < 5; i++)
     {
