--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Home/Index.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Home/Index.cshtml
@@ -4,6 +4,91 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
+    <h1 class="display-4">Welcome to Graoforce Team</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
+
+
+<div class="mb-5"></div>
+
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="~/Images/Airsoft-1.jpg" alt="First slide" style="height:500px">
+            <div class="carousel-caption d-none d-md-block">
+                <h5><a class="btn btn-primary" asp-controller="Team" asp-action="Events">Graforce Events</a></h5>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="~/Images/Airsoft-2.jpg" alt="Second slide" style="height:500px">
+            <div class="carousel-caption d-none d-md-block">
+                <h5><a class="btn btn-primary" asp-controller="Team" asp-action="Players">Graforce Team</a></h5>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="~/Images/Airsoft-3.jpg" alt="Third slide" style="height:500px">
+            <div class="carousel-caption d-none d-md-block">
+                <h5><a class="btn btn-primary" asp-controller="Team" asp-action="Players">About us</a></h5>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<div class="container">
+    <div class="row  mt-3">
+        <div class="col-md-4   text-center xs mb-2">
+            <span>
+                <i class="fas fa-crown" style="color:darkgreen"></i>
+                <strong>Section</strong>
+            </span>
+            <hr />
+            <p>
+                Text messaging, or texting, is the act of composing and sending electronic messages, typically consisting of alphabetic and numeric characters, between two or more users of mobile devices, desktops/laptops, or other type of compatible computer. Text messages may be sent over a cellular network, or may also be sent via an Internet connection.
+            </p>
+        </div>
+        <div class="col-md-4   text-center xs mb-2">
+            <span>
+                <i class="fab fa-gitkraken" style="color:cornflowerblue"></i>
+                <strong>Section</strong> 
+            </span>
+            <hr />
+            <p>
+                Text messaging, or texting, is the act of composing and sending electronic messages, typically consisting of alphabetic and numeric characters, between two or more users of mobile devices, desktops/laptops, or other type of compatible computer. Text messages may be sent over a cellular network, or may also be sent via an Internet connection.
+            </p>
+        </div>
+        <div class="col-md-4  text-center xs mb-2">
+            <span>
+                <i class="fab fa-hotjar" style="color:red"></i>
+                <strong>Section</strong>
+            </span>
+            <hr />
+            <p>
+                Text messaging, or texting, is the act of composing and sending electronic messages, typically consisting of alphabetic and numeric characters, between two or more users of mobile devices, desktops/laptops, or other type of compatible computer. Text messages may be sent over a cellular network, or may also be sent via an Internet connection.
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/h1xutGF0d8s" allowfullscreen></iframe>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZJGgr_heTi4" allowfullscreen></iframe>
+        </div>
+    </div>
+
+
 </div>
