--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Players/Index.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Players/Index.cshtml
@@ -13,7 +13,7 @@
                 <div class="image text-center">
                     @if (Model.Images.Count() < 1)
                     {
-                        <img src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cHJvZmlsZXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="#" class="img-fluid">
+                        <img src="~/Images/default-avatar.png" alt="#" class="img-fluid">
                         <a asp-action="UploadProfileImage" title="" class="editImage">
                             <i class="fa fa-camera"></i>
                         </a>
