--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/AllMessages.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/AllMessages.cshtml
@@ -1,6 +1,33 @@
 ﻿@model IEnumerable<AirsoftApplication.Web.ViewModels.Administration.Contacts.MessageViewModel>
 
-<div class="col-md-8">
+<div class="header bg-primary pb-6">
+    <div class="container-fluid">
+        <div class="header-body">
+            <div class="row align-items-center py-4">
+                <div class="col-lg-6 col-7">
+                    <h6 class="h2 text-white d-inline-block mb-0">Tables</h6>
+                    <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                        <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                            <li class="breadcrumb-item"><a><i class="fas fa-home"></i></a></li>
+                            <li class="breadcrumb-item"><a asp-action="Index">Dashboards</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Messages</li>
+                        </ol>
+                    </nav>
+                </div>
+                <div class="col-lg-6 col-5 text-right">
+                    <a href="#" class="btn btn-sm btn-neutral">New</a>
+                    <a asp-controller="Dashboard" asp-action="AllMessages" class="btn btn-sm btn-neutral">
+                        <i class="fas fa-bell"></i>  Messages
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="col-md-12">
     <div class="table-responsive">
         <table class="table align-items-center table-flush">
             <thead class="thead-light">
@@ -10,7 +37,7 @@
                     <th scope="col" class="sort" data-sort="username">Username</th>
                     <th scope="col" class="sort" data-sort="subject">Subject</th>
                     <th scope="col" class="sort" data-sort="content">Content</th>
-                    <th scope="col" class="sort" data-sort="hasbeenRead">Is Read</th>
+                    <th scope="col" class="sort" data-sort="status">Status</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -57,7 +84,23 @@
                         <th scope="row">
                             <div class="media align-items-center">
                                 <div class="media-body">
-                                    <span class="hasbeenRead mb-0 text-sm">@message.HasBeenRead</span>
+                                    @if (message.HasBeenRead)
+                                    {
+                                        <span class="badge badge-dot mr-4">
+                                            <i class="bg-success"></i>
+                                            <span class="status">answered </span>
+                                        </span>
+                                    }
+                                    else
+                                    {
+                                        <span class="badge badge-dot mr-4">
+                                            <i class="bg-warning"></i>
+                                            <span class="status">not answered  </span>
+                                        </span>
+                                    }
+
+
+                                    <span class="status mb-0 text-sm"></span>
                                 </div>
                             </div>
                         </th>
