--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/MessageById.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Dashboard/MessageById.cshtml
@@ -1,12 +1,63 @@
 ﻿@model AirsoftApplication.Web.ViewModels.Administration.Contacts.MessageViewModel
 
+<div class="header bg-primary pb-6">
+    <div class="container-fluid">
+        <div class="header-body">
+            <div class="row align-items-center py-4">
+                <div class="col-lg-6 col-7">
+                    <h6 class="h2 text-white d-inline-block mb-0">Tables</h6>
+                    <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                        <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                            <li class="breadcrumb-item"><a><i class="fas fa-home"></i></a></li>
+                            <li class="breadcrumb-item"><a asp-action="Index">Dashboards</a></li>
+                            <li class="breadcrumb-item"><a asp-action="AllMessages">AllMessages</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">ReturnAnswer</li>
+                        </ol>
+                    </nav>
+                </div>
+                <div class="col-lg-6 col-5 text-right">
+                    <a href="#" class="btn btn-sm btn-neutral">New</a>
+                    <a asp-controller="Dashboard" asp-action="AllMessages" class="btn btn-sm btn-neutral">
+                        <i class="fas fa-bell"></i>  Messages
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<p>@Model.Email</p>
-<p>@Model.Username</p>
-<p>@Model.Content</p>
+<div class="row justify-content-center">
+    <div class="col-lg-5 col-md-6">
+        <div class="col-md-12 mt-3">
+            <div style="width: 25rem;">
+                <div class="card card-stats">
+                    <!-- Card body -->
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+                                <h5 class="card-title text-uppercase text-muted mb-0">Content</h5>
+                            </div>
+                            <div class="col-auto">
+                                <div class="icon icon-shape bg-green text-white rounded-circle shadow">
+                                    <i class="fas fa-envelope-open-text"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="mt-3 mb-0 text-lg">
+                            @Model.Content
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
 
 
-<form asp-area="Administration" asp-controller="Messages" asp-action="ReturnAnswer" enctype="multipart/form-data">
+<form asp-controller="Messages" asp-action="ReturnAnswer" enctype="multipart/form-data">
     <div class="form-group">
         <input type="hidden" asp-for="Id" class="form-control" />
     </div>
